--- a/main.css
+++ b/main.css
@@ -15,3 +15,58 @@ footer
 	bottom: 0px;
 	position: absolute;
 }
+nav {
+	width: 100%; 
+}
+
+nav ul {
+  transition: transform 1s;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center; }
+
+nav a {
+  color: black;
+  text-decoration: underline;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  padding: 1em 3em;
+  display: block; 
+}
+
+nav a:hover
+{
+  background-color: #595959;
+  transform: scale(1.2); 
+}
+.btn-menu
+{
+	display: none;
+}
+.prufa
+{
+	padding: 5px;
+}
+@media all and (max-width: 48em){
+	
+	nav ul {
+    flex-flow: column;
+    text-align: center;
+    max-height: 0;
+    transition: max-height 1s;
+    overflow: hidden;
+    background-color: #333333; 
+	}
+
+  .btn-menu {
+    display: block;
+    background-color: #333333;
+    text-align: center;
+    padding: 1em;
+    color: white;
+    font-size: 1.5em;
+    cursor: pointer; 
+	}
+}
